--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -18,7 +18,7 @@ color: #ff9900;
 <body>
 <h1>Version 0.5.3 (25/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Traduction en portuguais du convertisseur de devises (Merci à Marco).</li><li><span class="bugFix">Correction</span>
+<ul><li>Traduction en portugais du convertisseur de devises (Merci à Marco).</li><li><span class="bugFix">Correction</span>
 de nombreuses erreurs dans la version anglaise (Merci à Sharada)</li><li>Ajout de la possibilité de masquer les colonnes dans la tables des opérations.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
