--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,11 +15,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.3 (01/25/2010)</h1>
+<h1>Version 0.5.4&nbsp;candidate release (02/06/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Currency converter Portuguese translation (Thank's to Marco)</li><li><span class="bugFix">Fixes</span>
-a lot of mistakes in english wording (Thank's to Sharada)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul>
+<li>Portuguese translation (Thank's to Marco)</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>The ability to edit several transactions at a time.</li>
@@ -35,7 +34,8 @@ of users ask for it.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.5.2 (01/21/2010)</h2><ul><li>Adds ability to edit payment modes.</li></ul><h2>Version 0.5.1 (01/17/2010)</h2>
+<h2>Version 0.5.3 (01/25/2010)</h2><ul><li>Currency converter Portuguese translation (Thank's to Marco)</li><li><span class="bugFix">Fixes</span>
+a lot of mistakes in english wording (Thank's to Sharada)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul><h2>Version 0.5.2 (01/21/2010)</h2><ul><li>Adds ability to edit payment modes.</li></ul><h2>Version 0.5.1 (01/17/2010)</h2>
 <ul>
 <li>Adds transactions printing (feature requested by users).</li><li>Add a button in the transactions table to show/hide all the subtransactions.</li>
 </ul>
