--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,16 +15,16 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.4&nbsp;candidate release (02/06/2010)</h1>
+<h1>Version 0.5.4&nbsp;candidate release (02/08/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Portuguese translation (Thank's to Marco)</li></ul>
+<li>Portuguese translation (Thank's to Marco).</li><li><span class="bugFix">Fixes</span> a bug that deleted data files while saving under some Linux configurations.</li><li>Adds an auto-complete wizard in the "new transaction"
+dialog that completes the description as you type and
+deduces the category and payment mode.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>The ability to edit several transactions at a time.</li>
-<li>An auto-complete wizard in the "new transaction"
-dialog that would be able to complete the description as you type and
-to deduce other informations (especially categories).</li>
+
 <li>Improvements in statistic charts (grouping categories).</li>
 <li>The ability to bookmark preferred filters.</li><li>The ability to defined a target budget and to compare it to the real life ;-)</li>
 <li>The ability to encrypt data files and, maybe, to compress and store
