--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,17 +16,16 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.4 candidate release (06/02/2010)</h1>
+<h1>Version 0.5.4 candidate release (08/02/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Traduction en portugais (Merci à Marco).</li></ul>
+<ul><li>Traduction en portugais (Merci à Marco).</li><li><span class="bugFix">Correction</span> d'un bug entrainant la suppression du fichier de données lors de la sauvegarde sur certaines configurations Linux.</li><li>Ajout d'une auto-complétion dans le dialogue de création
+d'une opération. Celui-ci complète les descriptions
+possibles au fur et à mesure de la saisie et en déduit la catégorie et le mode de paiement.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>La possibilité d'éditer plusieurs opérations à la fois.</li>
 
-<li>Une auto-complétion dans le dialogue de création
-d'une opération. Celui-ci serait chargé de completer les descriptions
-possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li><li>Améliorations dans les graphiques de statistiques (possibilité de grouper plusieurs catégories).</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li><li>La possibilité de définir un budget cible et de le comparer à la dure réalité ;-)</li>
+<li>Améliorations dans les graphiques de statistiques (possibilité de grouper plusieurs catégories).</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li><li>La possibilité de définir un budget cible et de le comparer à la dure réalité ;-)</li>
 <li>La possibilité de compresser le fichier de
 données, de le protéger par mot de passe, et de le stocker/lire sur
 Internet.</li><li>Peut-être
