Fixes a bug in the auto-completion wizard

--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,11 +16,9 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.4 candidate release (08/02/2010)</h1>
+<h1>Version 0.5.5 (??/02/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Traduction en portugais (Merci à Marco).</li><li><span class="bugFix">Correction</span> d'un bug entrainant la suppression du fichier de données lors de la sauvegarde sur certaines configurations Linux.</li><li>Ajout d'une auto-complétion dans le dialogue de création
-d'une opération. Celui-ci complète les descriptions
-possibles au fur et à mesure de la saisie et en déduit la catégorie et le mode de paiement.</li></ul>
+<ul><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>La possibilité d'éditer plusieurs opérations à la fois.</li>
@@ -34,7 +32,9 @@ votre banque) ... ça dépendra du nombre de demandes.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version&nbsp;0.5.3 (25/01/2010)</h2><ul><li>Traduction en portugais du convertisseur de devises (Merci à Marco).</li><li><span class="bugFix">Correction</span>
+<h2>Version&nbsp;0.5.4 (08/02/2010)</h2><ul><li>Traduction en portugais (Merci à Marco).</li><li><span class="bugFix">Correction</span> d'un bug entrainant la suppression du fichier de données lors de la sauvegarde sur certaines configurations Linux.</li><li>Ajout d'une auto-complétion dans le dialogue de création
+d'une opération. Celui-ci complète les descriptions
+possibles au fur et à mesure de la saisie et en déduit la catégorie et le mode de paiement.</li></ul><h2>Version&nbsp;0.5.3 (25/01/2010)</h2><ul><li>Traduction en portugais du convertisseur de devises (Merci à Marco).</li><li><span class="bugFix">Correction</span>
 de nombreuses erreurs dans la version anglaise (Merci à Sharada)</li><li>Ajout de la possibilité de masquer les colonnes dans la tables des opérations.</li></ul><h2>Version&nbsp;0.5.2 (21/01/2010)</h2><ul><li>Ajout de la possibilité d'éditer les modes de paiement.</li></ul><h2>Version&nbsp;0.5.1 (17/01/2010)</h2><ul><li>Support de l'impression de la liste des opérations.</li><li>Ajout d'un bouton dans la table des opérations pour afficher/masquer toutes les sous-opérations.</li></ul><h2>Version&nbsp;0.5.0 (10/01/2010)</h2><ul><li>Ajout d'un vue budgetaire (Il semble que certains utilisateurs la veulent vraiment).</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
 (des utilisateurs ont rapporté que les soldes positifs étaient quasiment illisibles).</li><li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, dans
