--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,10 +15,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.5 (02/??/2010)</h1>
+<h1>Version 0.5.5 translator's preview (02/19/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li></ul>
+<li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li>Adds text file import/export capabilities.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>The ability to edit several transactions at a time.</li>
