--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,9 +16,9 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.5 (??/02/2010)</h1>
+<h1>Version 0.5.5 aperçu pour les traducteurs (19/02/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li></ul>
+<ul><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>La possibilité d'éditer plusieurs opérations à la fois.</li>
