--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,22 +15,13 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.5 translator's preview (02/19/2010)</h1>
+<h1>Version 0.5.5 (03/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li>Adds text file import/export capabilities.</li></ul>
-<h2>What is planned in future versions</h2>
-<ul>
-<li>The ability to edit several transactions at a time.</li>
-
-<li>Improvements in statistic charts (grouping categories).</li>
-<li>The ability to bookmark preferred filters.</li><li>The ability to defined a target budget and to compare it to the real life ;-)</li>
-<li>The ability to encrypt data files and, maybe, to compress and store
-them over the Internet.</li>
-<li>Maybe the ability to deal with OFX data files ... If a lot
-of users ask for it.</li>
-</ul>
-<hr>
+<li>Adds text file import/export capabilities.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
+bug in the transactions table. Sometimes transactions with
+subtransactions appeared with a complement that had an amount equals to
+zero.</li></ul><hr>
 <h1>Older releases</h1>
 <h2>Version 0.5.4 (02/08/2010)</h2><ul><li>Portuguese translation (Thank's to Marco).</li><li><span class="bugFix">Fixes</span> a bug that deleted data files while saving under some Linux configurations.</li><li>Adds an auto-complete wizard in the "new transaction"
 dialog that completes the description as you type and
