--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -18,19 +18,9 @@ color: #ff9900;
 <body>
 <h1>Version 0.5.5 aperçu pour les traducteurs (19/02/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li></ul>
-<h2>Fonctionnalités prévues pour de prochaines versions</h2>
-<ul>
-<li>La possibilité d'éditer plusieurs opérations à la fois.</li>
-
-<li>Améliorations dans les graphiques de statistiques (possibilité de grouper plusieurs catégories).</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li><li>La possibilité de définir un budget cible et de le comparer à la dure réalité ;-)</li>
-<li>La possibilité de compresser le fichier de
-données, de le protéger par mot de passe, et de le stocker/lire sur
-Internet.</li><li>Peut-être
-la prise en charge des fichiers au format OFX (issus de Money ou de
-votre banque) ... ça dépendra du nombre de demandes.</li>
-</ul>
-<hr>
+<ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li><span class="bugFix">Correction</span>&nbsp;d'un
+bug dans la table des opérations; parfois, quand une opération avait
+des sous-opération, il apparaissait un complément de montant nul.</li></ul><hr>
 <h1>Versions précédentes</h1>
 <h2>Version&nbsp;0.5.4 (08/02/2010)</h2><ul><li>Traduction en portugais (Merci à Marco).</li><li><span class="bugFix">Correction</span> d'un bug entrainant la suppression du fichier de données lors de la sauvegarde sur certaines configurations Linux.</li><li>Ajout d'une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci complète les descriptions
