Adds an Icon to the open menu item

--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -18,7 +18,7 @@ color: #ff9900;
 <body>
 <h1>Version 0.5.5 aperçu pour les traducteurs (19/02/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li><span class="bugFix">Correction</span>&nbsp;d'un
+<ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li>Améliore le comportement des champs de saisie de dates.</li><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li><span class="bugFix">Correction</span>&nbsp;d'un
 bug dans la table des opérations; parfois, quand une opération avait
 des sous-opération, il apparaissait un complément de montant nul.</li></ul><hr>
 <h1>Versions précédentes</h1>
