--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,9 +16,11 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.5 aperçu pour les traducteurs (19/02/2010)</h1>
+<h1>Version 0.6.0 (??/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li>Améliore le comportement des champs de saisie de dates.</li><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li><span class="bugFix">Correction</span>&nbsp;d'un
+<ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li>Ajout
+d'une icône d'alerte dans l'onglet de l'historique du solde quand
+celui-ci présente une période de découvert dans le futur.</li><li>Améliore le comportement des champs de saisie de dates.</li><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li><span class="bugFix">Correction</span>&nbsp;d'un
 bug dans la table des opérations; parfois, quand une opération avait
 des sous-opération, il apparaissait un complément de montant nul.</li></ul><hr>
 <h1>Versions précédentes</h1>
