--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,10 +15,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.5 (03/??/2010)</h1>
+<h1>Version 0.6.0 (03/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds text file import/export capabilities.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
+<li>Adds text file import/export capabilities.</li><li>Adds an alert icon to the balance history tab when there is a negative balance period in the future.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
 bug in the transactions table. Sometimes transactions with
 subtransactions appeared with a complement that had an amount equals to
 zero.</li></ul><hr>
