--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.0 (??/03/2010)</h1>
+<h1>Version 0.6.0 (09/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li>Ajout
 d'une icône d'alerte dans l'onglet de l'historique du solde quand
