--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,15 +15,15 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.0 (03/09/2010)</h1>
+<h1>Version 0.6.1 (03/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds text file import/export capabilities.</li><li>Adds an alert icon to the balance history tab when there is a negative balance period in the future.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
+<li>Improves the account&nbsp;administration screen.</li></ul><hr>
+<h1>Older releases</h1>
+<h2>Version 0.6.0 (03/09/2010)</h2><ul><li>Adds text file import/export capabilities.</li><li>Adds an alert icon to the balance history tab when there is a negative balance period in the future.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
 bug in the transactions table. Sometimes transactions with
 subtransactions appeared with a complement that had an amount equals to
-zero.</li></ul><hr>
-<h1>Older releases</h1>
-<h2>Version 0.5.4 (02/08/2010)</h2><ul><li>Portuguese translation (Thank's to Marco).</li><li><span class="bugFix">Fixes</span> a bug that deleted data files while saving under some Linux configurations.</li><li>Adds an auto-complete wizard in the "new transaction"
+zero</li></ul><h2>Version 0.5.4 (02/08/2010)</h2><ul><li>Portuguese translation (Thank's to Marco).</li><li><span class="bugFix">Fixes</span> a bug that deleted data files while saving under some Linux configurations.</li><li>Adds an auto-complete wizard in the "new transaction"
 dialog that completes the description as you type and
 deduces the category and payment mode.</li></ul><h2>Version 0.5.3 (01/25/2010)</h2><ul><li>Currency converter Portuguese translation (Thank's to Marco)</li><li><span class="bugFix">Fixes</span>
 a lot of mistakes in english wording (Thank's to Sharada)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul><h2>Version 0.5.2 (01/21/2010)</h2><ul><li>Adds ability to edit payment modes.</li></ul><h2>Version 0.5.1 (01/17/2010)</h2>
