Fixes a problem when date year where entered on a single char (for instance 1/1/1 resulted in year 1 instead of 2001).

--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -14,16 +14,14 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
 <h1>Version 0.6.1 (??/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li>Améliore l'écran d'administration des comptes.</li>
 <li><span class="bugFix">Correction d'un bug</span>
-: Yapbam avait un comportement étrange quand une date avant l'an 1900
-était saisie. </li>
+: Yapbam avait un comportement étrange quand une date était saisie avec la date sur un seul caractère (ex : 20/3/9). </li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
