--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,7 +19,10 @@ color: #ff9900;
 <h1>Version 0.6.1 (??/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Améliore l'écran d'administration des comptes.</li>
+<li>Améliore l'écran d'administration des comptes.</li><li>Améliore la saisie des entiers
+(A présent seuls des caractères numériques peuvent être saisis et les
+fléches haute et basse augmentent ou diminue la valeur contenue dans le
+champ)</li>
 <li><span class="bugFix">Correction d'un bug</span>
 : Yapbam avait un comportement étrange quand une date était saisie avec la date sur un seul caractère (ex : 20/3/9). </li>
 </ul>
