Add web resources access

--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -22,7 +22,7 @@ color: #ff9900;
 <li>Améliore l'écran d'administration des comptes.</li><li>Améliore la saisie des entiers
 (A présent seuls des caractères numériques peuvent être saisis et les
 fléches haute et basse augmentent ou diminue la valeur contenue dans le
-champ)</li>
+champ).</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site de Yapbam et la page de support).</li>
 <li><span class="bugFix">Correction d'un bug</span>
 : Yapbam avait un comportement étrange quand une date était saisie avec la date sur un seul caractère (ex : 20/3/9). </li>
 </ul>
