--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -16,6 +16,6 @@ color: #ff9900;
 <body>
 <h1>Contributeurs</h1>
 Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
-Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a><br>
+Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a><br>Tests : Laurence Bot<br>
 Développement, site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
 </body></html>
