Removes the ability to define payment modes in account creation dialog

--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -18,7 +18,7 @@
 <h1>Version 0.6.1 (03/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Improves the account&nbsp;administration screen.</li><li>Improves
+<li>Improves the account&nbsp;administration screen.</li><li>Simplifies account creation dialog. Users report that the ability to add payment modes in this screen was confusing.</li><li>Improves
 integer field input (now only numercial characters can be typed in such
 fields and up and down arrows respectively increase or decrease the
 field value).</li><li>Add access to web resources (Yapbam site and Yapbam support page).</li><li><span class="bugFix">Fixes a bug</span> : Yapbam had a 'strange' behaviour when dates where entered using a 1 digit year format (ie 03/20/9).</li></ul><hr>
