--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,7 +19,9 @@ color: #ff9900;
 <h1>Version 0.6.1 (??/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Améliore l'écran d'administration des comptes.</li><li>Améliore la saisie des entiers
+<li>Améliore l'écran d'administration des comptes.</li><li>Simplifie le
+dialogue de création de compte. Des utilisateurs ont rapporté que la
+possibilité de définir des modes dans cet écran était perturbant.</li><li>Améliore la saisie des entiers
 (A présent seuls des caractères numériques peuvent être saisis et les
 fléches haute et basse augmentent ou diminue la valeur contenue dans le
 champ).</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site de Yapbam et la page de support).</li>
