--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,14 +19,19 @@ color: #ff9900;
 <h1>Version 0.6.1 (??/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Améliore l'écran d'administration des comptes.</li><li>Simplifie le
-dialogue de création de compte. Des utilisateurs ont rapporté que la
-possibilité de définir des modes dans cet écran était perturbant.</li><li>Améliore la saisie des entiers
-(A présent seuls des caractères numériques peuvent être saisis et les
-fléches haute et basse augmentent ou diminue la valeur contenue dans le
-champ).</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site de Yapbam et la page de support).</li>
-<li><span class="bugFix">Correction d'un bug</span>
-: Yapbam avait un comportement étrange quand une date était saisie avec la date sur un seul caractère (ex : 20/3/9). </li>
+  <li>Améliore l'écran d'administration des comptes.</li>
+  <li>Am&eacute;liore la vitesse de lancement (L'application d&eacute;marre sans 
+    attendre la fin de la v&eacute;rification de l'existence d'une nouvelle version).</li>
+  <li>Simplifie le dialogue de création de compte. Des utilisateurs ont rapporté 
+    que la possibilité de définir des modes dans cet écran était perturbant.</li>
+  <li>Améliore la saisie des entiers (A présent seuls des caractères numériques 
+    peuvent être saisis et les fléches haute et basse augmentent ou diminue la 
+    valeur contenue dans le champ).</li>
+  <li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
+    de Yapbam et la page de support).</li>
+  <li><span class="bugFix">Correction d'un bug</span> : Yapbam avait un comportement 
+    étrange quand une date était saisie avec la date sur un seul caractère (ex 
+    : 20/3/9). </li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
