--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@
 
 </style></head>
 <body>
-<h1>Version 0.6.1 (03/??/2010)</h1>
+<h1>Version 0.6.1 (04/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
   <li>Improves the account&nbsp;administration screen.</li>
@@ -26,7 +26,7 @@
   <li>Improves integer field input (now only numerical characters can be typed 
     in such fields and up and down arrows respectively increase or decrease the 
     field value).</li>
-  <li>Add access to web resources (Yapbam site and Yapbam support page).</li>
+  <li>Adds access to web resources (Yapbam site and Yapbam support page).</li><li>Adds checkbook management.</li>
   <li><span class="bugFix">Fixes a bug</span> : Yapbam had a 'strange' behavior 
     when dates where entered using a 1 digit year format (for instance 03/20/9).</li>
 </ul>
