Autoscrolls the balance history to have the selected date visible

--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -18,15 +18,20 @@
 <h1>Version 0.6.1 (04/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Improves the account&nbsp;administration screen.</li>
+  <li>Adds checkbook management.</li>
+  <li>Adds access to web resources (Yapbam site and Yapbam support page).</li>
   <li>Improves launch speed (The launch don't wait anymore for the "new release 
-    check" to finish).</li><li>Improves the check for updates process (this check can now be interrupted if the connection takes too long).</li>
-  <li>Simplifies account creation dialog. Users report that the ability to add 
-    payment modes in this screen was confusing.</li>
+    check" to finish).</li>
+  <li>Improves the check for updates process (this check can now be interrupted 
+    if the connection takes too long).</li>
+  <li>Improves the account&nbsp;administration screen.</li>
   <li>Improves integer field input (now only numerical characters can be typed 
     in such fields and up and down arrows respectively increase or decrease the 
     field value).</li>
-  <li>Adds access to web resources (Yapbam site and Yapbam support page).</li><li>Adds checkbook management.</li>
+  <li>Simplifies account creation dialog. Users report that the ability to add 
+    payment modes in this screen was confusing.</li>
+  <li>Autoscrolls the balance history view to always have the selected date visible 
+    when this panel appears.</li>
   <li><span class="bugFix">Fixes a bug</span> : Yapbam had a 'strange' behavior 
     when dates where entered using a 1 digit year format (for instance 03/20/9).</li>
 </ul>
