--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@
 
 </style></head>
 <body>
-<h1>Version 0.6.1 (04/??/2010)</h1>
+<h1>Version 0.6.1 (04/02/2010)</h1>
 <h2>New in this version</h2>
 <ul>
   <li>Adds checkbook management.</li>
